# gaming-audit-cli

./: .gitignore  AI_BOOTSTRAP.md  README.md  gaming-audit.spec  pyproject.toml  run_audit.py
docs/: ARCHITECTURE.md
packaging/: windows_entry.py
screenshots/: full-audit.html  menu.html  recent-reports.html
scripts/: build_windows_exe.ps1
src/gaming_audit/: __init__.py  __main__.py  app.py  constants.py  models.py
src/gaming_audit/cli/: __init__.py  actions.py  app.py  parser.py  render.py
src/gaming_audit/normalizers/: __init__.py  records.py
src/gaming_audit/reporters/: __init__.py  console_reporter.py  json_reporter.py  summary_reporter.py  text_reporter.py  view_data.py
src/gaming_audit/services/: __init__.py  orchestrator.py
src/gaming_audit/sources/: __init__.py  afterburner_source.py  command_runner.py  dxdiag_source.py  network_source.py  nvidia_source.py  powercfg_source.py  processes_source.py  registry_source.py  services_source.py  software_source.py  storage_source.py  wmi_source.py
src/gaming_audit/utils/: __init__.py  formatting.py  parsing.py  paths.py  time_utils.py
tests/: test_cli_actions.py  test_cli_app.py  test_cli_parser.py  test_json_schema.py  test_normalizers.py  test_parsers.py  test_reporters.py  test_rich_rendering.py  test_services.py
